test(master): test lint-staged

--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   },
   "lint-staged": {
     "*.{js,vue,ts,jsx,tsx}": [
-      "prettier --write",
       "eslint --fix"
     ],
     "*.{html,css,less,scss,md}": [
-      "prettier --write"
+      "eslint --fix"
     ]
   },
   "dependencies": {
