--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,28 +9,28 @@ on:
       - LICENSE
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest # 使用ubuntu系统镜像运行自动化脚本
-
-    steps: # 自动化步骤
-      # 第一步 拉取代码打包
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v1
+    strategy:
+      matrix:
+        node-version: [15]
+    steps:
+      - uses: actions/checkout@master
+      - uses: pnpm/action-setup@v2.0.1
         with:
-          node-version: 12.x
+          version: 6.20.3
+      - name: Install Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
 
-      - name: Install Dependencies
-        run: npm install
-        env:
-          CI: true
+        # 第一步 拉取代码打包
 
-      - name: Build Project
-        run: npm run build
-        env:
-          CI: true
+        # - name: Checkout
+        #   uses: actions/checkout@master
 
       - name: Deploy to Server # 第二步，rsync推文件
         uses: AEnterprise/rsync-deploy@v1.0 # 使用别人包装好的步骤镜像
