--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,20 +19,20 @@ jobs:
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.20.3
+      # 安装node js
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
+        # 安装依赖
       - name: Install dependencies
         run: pnpm install
-
-        # 第一步 拉取代码打包
-
-        # - name: Checkout
-        #   uses: actions/checkout@master
-
-      - name: Deploy to Server # 第二步，rsync推文件
+      # 打包项目
+      - name: build Project
+        run: pnpm build:test
+      # 发布到服务器
+      - name: Deploy to Server
         uses: AEnterprise/rsync-deploy@v1.0 # 使用别人包装好的步骤镜像
         env:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }} # 引用配置，SSH私钥
