--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "element-plus": "^2.1.3",
     "pinia": "2.0.12",
     "vue": "^3.2.31",
+    "vue-i18n": "^9.2.0-beta.32",
     "vue-router": "4.0.14"
   },
   "devDependencies": {
