--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "element-plus": "^2.1.3",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "2.0.12",
     "vue": "^3.2.31",
     "vue-i18n": "^9.2.0-beta.32",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.21",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "@vitejs/plugin-vue": "^2.2.4",
@@ -50,6 +53,7 @@
     "lint-staged": "^12.3.5",
     "rollup": "^2.70.1",
     "rollup-plugin-visualizer": "^5.6.0",
+    "sass": "^1.49.9",
     "typescript": "^4.6.2",
     "unplugin-auto-import": "^0.6.6",
     "unplugin-vue-components": "^0.18.1",
